# zebraan-ai

./: .gitignore  README.md  pyproject.toml
src/agentic_ai/: crew.py  main.py
