[project]
name = "agentic_ai"
version = "0.1.0"
description = "agentic_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
agentic_ai = "agentic_ai.main:run"
run_crew = "agentic_ai.main:run"
train = "agentic_ai.main:train"
replay = "agentic_ai.main:replay"
test = "agentic_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
